# shop

./: Cargo.toml  README.md  database.db
src/: db.rs  errors.rs  hashing.rs  main.rs  strs.rs  testing.rs
src/adminroutes/: admin_apis.rs  mod.rs
src/users/: mod.rs  routes_profile.rs
src/web/: mod.rs  refresh.rs  routes_cart.rs  routes_categorys.rs  routes_home.rs  routes_info.rs  routes_login.rs  routes_reviews.rs  routes_signup.rs
