[package]
name = "guess"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server"] }  
axum-server = "0.7.1"
tower-http={version="0.6.2",features=["fs"]}
serde = { version = "1.0", features = ["derive"] }  # ✅ For Serialize and Deserialize
serde_json = "1.0" 

chrono = "0.4"
async-trait = "0.1"
axum-extra = "0.10.0"
headers="0.4.0"
axum-jwt-auth="0.4.0"
rsa ="0.9.7"
rand="0.9.0"
jsonwebtoken="9.3.1"
bcrypt="0.17.0"
log = { version = "0.4.0-rc.1" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
mockall = "0.13.1"